...
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Yz8-LD-2bt" userLabel="DrumPadMasterControls">
                    <rect key="frame" x="10" y="84" width="136" height="320"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Master" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xNP-af-xVH" userLabel="masterLabel">
                            <rect key="frame" x="20" y="190" width="96" height="23"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="75%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="R9b-E6-SjG" userLabel="masterVolumePercentageLabel">
                            <rect key="frame" x="20" y="10" width="96" height="24"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
...
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        </view>
                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" id="PFW-uN-4Eh" userLabel="bank 1, bank 2">
                            <rect key="frame" x="5" y="223" width="126" height="32"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Bank 1"/>
                                <segment title="Bank 2"/>
                            </segments>
                        </segmentedControl>
                    </subviews>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <constraints>
                        <constraint firstItem="xNP-af-xVH" firstAttribute="leading" secondItem="Yz8-LD-2bt" secondAttribute="leading" constant="20" id="4Lu-9e-bI6"/>
...
